# Streaming-Platform-Launcher

./: CMakeLists.txt  Dockerfile  README.md  dockerRun.sh  index.html  main  main.cpp  package-lock.json  package.json  server.js  streamimdb  tv_frontend
